force-app/main/default/objects/Lead/fields/Available_For_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Available_For_Conversion__c</fullName>
    <description>Used in Contact mapping to define that a contact is onverted from Lead</description>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available For Conversion</label>
    <type>Checkbox</type>
</CustomField>