force-app/main/default/objects/Lead/fields/Contact_Title_Link__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://soprasteriasc.my.salesforce.com/&quot;&amp;Id,If(Title=&quot;&quot;,&quot;Link&quot;,Title))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Title</label>
    <type>Text</type>
</CustomField>