force-app/main/default/objects/Lead/fields/Days_since_last_modified__c.field-meta.xml
<CustomField>
    <fullName>Days_since_last_modified__c</fullName>
    <formula>TODAY()  -    DATEVALUE( LastModifiedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since last modified</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>