force-app/main/default/objects/Lead/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <description>This field indicates how many employees are working in the company which helps to qualify a lead</description>
    <inlineHelpText>If you are not certain about the number of employees, please estimate</inlineHelpText>
    <label>Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - 10</fullName>
            </value>
            <value>
                <fullName>11- 20</fullName>
            </value>
            <value>
                <fullName>21 - 99</fullName>
            </value>
            <value>
                <fullName>100 - 199</fullName>
            </value>
            <value>
                <fullName>200 - 499</fullName>
            </value>
            <value>
                <fullName>500 - 999</fullName>
            </value>
            <value>
                <fullName>1.000 - 1.999</fullName>
            </value>
            <value>
                <fullName>2.000 + employees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>