force-app/main/default/objects/Lead/fields/Employment_status__c.field-meta.xml
<CustomField>
    <fullName>Employment_status__c</fullName>
    <inlineHelpText>Indicates if lead is permanent employee or hired.</inlineHelpText>
    <label>Employment status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Employment_status</valueSetName>
    </valueSet>
</CustomField>