force-app/main/default/objects/Lead/fields/Enable_Duplicate_Rules__c.field-meta.xml
<CustomField>
    <fullName>Enable_Duplicate_Rules__c</fullName>
    <formula>IF( (NOW()-LastModifiedDate)*86400&gt;5  ,true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enable Duplicate Rules</label>
    <type>Checkbox</type>
</CustomField>