force-app/main/default/objects/Lead/fields/From_Intranet__c.field-meta.xml
<CustomField>
    <fullName>From_Intranet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Intranet</label>
    <type>Checkbox</type>
</CustomField>