force-app/main/default/objects/Lead/fields/Imported_Owner__c.field-meta.xml
<CustomField>
    <fullName>Imported_Owner__c</fullName>
    <label>Imported Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>