force-app/main/default/objects/Lead/fields/info_registration_of_company__c.field-meta.xml
<CustomField>
    <fullName>info_registration_of_company__c</fullName>
    <defaultValue>&quot;Even if you have selected existing Account you need to enter a value in the Company field. All other fields (inc. Company) will be populated from Account when you save. If this lead is on a new Company you have to fill in the appropriate values below.&quot;</defaultValue>
    <label>.</label>
    <type>TextArea</type>
</CustomField>