force-app/main/default/objects/Lead/fields/Lead_Company_English_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Company_English_Name__c</fullName>
    <description>The English name of the Company registered on a Lead</description>
    <inlineHelpText>This field is updated when you save the record based on the value from Company or Account. If you manually enter an English name the system will not override it</inlineHelpText>
    <label>Lead Company English Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>