force-app/main/default/objects/Lead/fields/Lead_Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Lead_Reported_By__c</fullName>
    <description>This field will be filled out automatically when a Lead is coming in from SharePoint</description>
    <inlineHelpText>This field is filled out automatically if the Lead is coming from SharePoint</inlineHelpText>
    <label>Lead Reported By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>