force-app/main/default/objects/Lead/fields/Lead_Subject__c.field-meta.xml
<CustomField>
    <fullName>Lead_Subject__c</fullName>
    <label>Lead Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>