force-app/main/default/objects/Lead/fields/Lead_Title__c.field-meta.xml
<CustomField>
    <fullName>Lead_Title__c</fullName>
    <description>This is a field that indicates short and simple what the Lead is about</description>
    <inlineHelpText>Please insert a Lead Title here. (F.ex. &quot;Salesforce Service Cloud Implementation&quot;</inlineHelpText>
    <label>Lead Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>