force-app/main/default/objects/Lead/fields/Lead_URL__c.field-meta.xml
<CustomField>
    <fullName>Lead_URL__c</fullName>
    <formula>&apos;https://soprasteriasc.lightning.force.com/&apos; &amp;  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead URL</label>
    <type>Text</type>
</CustomField>