force-app/main/default/objects/Lead/fields/Org_number__c.field-meta.xml
<CustomField>
    <fullName>Org_number__c</fullName>
    <inlineHelpText>Org number must be in this format:
NO: 9 pos. numeric,
DK: 8 pos. numeric,
SE: 6 pos. numeric + &quot;-&quot; + 4 pos. numeric. No space characters allowed.</inlineHelpText>
    <label>Org. number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>