force-app/main/default/objects/Lead/fields/Org_Number_Check__c.field-meta.xml
<CustomField>
    <fullName>Org_Number_Check__c</fullName>
    <formula>HYPERLINK(SUBSTITUTE(&quot;https://w2.brreg.no/enhet/sok/treffliste.jsp?navn=&quot;&amp;Company&amp;&quot;&amp;orgform=0&amp;fylke=0&amp;kommune=0&quot;, &apos; &apos;,&apos;%20&apos;),&quot;Search BRREG&quot;)</formula>
    <inlineHelpText>You get redirected to the Brønnøysundregistrene to find the correct org number to the company name.</inlineHelpText>
    <label>Org Number Check</label>
    <type>Text</type>
</CustomField>