force-app/main/default/objects/Lead/fields/Relevant_topics__c.field-meta.xml
<CustomField>
    <fullName>Relevant_topics__c</fullName>
    <label>Relevant topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agile businesses</fullName>
            </value>
            <value>
                <fullName>Artificial intelligence</fullName>
            </value>
            <value>
                <fullName>Cloud and digital platforms</fullName>
            </value>
            <value>
                <fullName>Customer experience</fullName>
            </value>
            <value>
                <fullName>Data-driven businesses</fullName>
            </value>
            <value>
                <fullName>Design-driven innovation</fullName>
            </value>
            <value>
                <fullName>Development and integration</fullName>
            </value>
            <value>
                <fullName>Digital workplace</fullName>
            </value>
            <value>
                <fullName>Management and strategy</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Outsourcing</fullName>
            </value>
            <value>
                <fullName>Sustainability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>