force-app/main/default/objects/Lead/recordTypes/Contact_Lead.recordType-meta.xml
<RecordType>
    <fullName>Contact_Lead</fullName>
    <active>false</active>
    <businessProcess>Business Lead</businessProcess>
    <label>Contact Lead</label>
</RecordType>