force-app/main/default/objects/Lead/validationRules/Org_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Org_Number</fullName>
    <active>false</active>
    <description>Validate org number to specific formats for NO, SE and DK. Accept any format for all other countries</description>
    <errorConditionFormula>IF(ISBLANK(Org_number__c), false,
IF((ISPICKVAL(Country__c, &quot;Norway&quot;) &amp;&amp; (!ISNUMBER(Org_number__c) || LEN(Org_number__c)!=9)), true,
IF((ISPICKVAL(Country__c, &quot;Sweden&quot;) &amp;&amp; (FIND(&quot;-&quot;,Org_number__c)!=7 || !ISNUMBER(SUBSTITUTE(Org_number__c,&quot;-&quot;,&quot;&quot;)) || LEN(Org_number__c)!=11 || LEN(SUBSTITUTE(Org_number__c,&quot;-&quot;,&quot;&quot;))!=10)), true,
IF((ISPICKVAL(Country__c, &quot;Denmark&quot;) &amp;&amp; (!ISNUMBER(Org_number__c) || LEN(Org_number__c)!=8)), true,

false
))))</errorConditionFormula>
    <errorDisplayField>Org_number__c</errorDisplayField>
    <errorMessage>Org number must be in this format:
NO: 9 pos. numeric,
DK: 8 pos. numeric,
SE: 6 pos. numeric + &quot;-&quot; + 4 pos. numeric. No space characters allowed.</errorMessage>
</ValidationRule>