force-app/main/default/objects/Lead/listViews/All_Contact_Leads_NO.listView-meta.xml
<ListView>
    <fullName>All_Contact_Leads_NO</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Owner_Name__c</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Norway</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Lead.Business_Lead</value>
    </filters>
    <label>All Contact Leads NO</label>
</ListView>