force-app/main/default/objects/Lead/listViews/Ansatte_Sopra_Steria_Lead.listView-meta.xml
<ListView>
    <fullName>Ansatte_Sopra_Steria_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Ansatte Sopra Steria</label>
    <queue>Ansatte_Sopra_Steria</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>