force-app/main/default/objects/Lead/listViews/EGGS_New_Leads.listView-meta.xml
<ListView>
    <fullName>EGGS_New_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>EGGS New Leads</label>
    <queue>EGGS_new_leads</queue>
    <sharedTo>
        <group>Eggs</group>
    </sharedTo>
</ListView>