force-app/main/default/objects/Lead/listViews/EGGS_new_leads_Lead.listView-meta.xml
<ListView>
    <fullName>EGGS_new_leads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>EGGS new leads</label>
    <queue>EGGS_new_leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>