force-app/main/default/objects/Lead/listViews/External_conference_Leads.listView-meta.xml
<ListView>
    <fullName>External_conference_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Age__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>Primary_Campaign_Source__c</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>External Conference</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New,Qualification,Qualified</value>
    </filters>
    <label>External conference Leads</label>
</ListView>