force-app/main/default/objects/Lead/listViews/Inbound_Leads_SE_Lead.listView-meta.xml
<ListView>
    <fullName>Inbound_Leads_SE_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Inbound Leads SE</label>
    <queue>Inbound_Leads_SE</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>