force-app/main/default/objects/Lead/listViews/MS_Lead.listView-meta.xml
<ListView>
    <fullName>MS_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FULL_NAME</field>
        <operation>startsWith</operation>
        <value>MSFT</value>
    </filters>
    <label>MS Lead</label>
</ListView>