force-app/main/default/objects/Lead/listViews/MSFT.listView-meta.xml
<ListView>
    <fullName>MSFT</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FULL_NAME</field>
        <operation>startsWith</operation>
        <value>MSFT_TEST</value>
    </filters>
    <label>MSFT Test leads</label>
</ListView>