force-app/main/default/objects/Lead/listViews/MyUnreadLeads.listView-meta.xml
<ListView>
    <fullName>MyUnreadLeads</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>Lead_Reported_By__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Lead_Subject__c</columns>
    <columns>Next_Step__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CONVERTED</columns>
    <columns>Primary_Campaign_Source__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Age__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Leads</label>
</ListView>