force-app/main/default/objects/Lead/listViews/New_Event_Leads_Norway.listView-meta.xml
<ListView>
    <fullName>New_Event_Leads_Norway</fullName>
    <columns>Contact_Title_Link__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Norway</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Event Lead</value>
    </filters>
    <label>New Event Leads Norway</label>
    <sharedTo>
        <group>NO</group>
    </sharedTo>
</ListView>