force-app/main/default/objects/Lead/listViews/New_Leads_Sweden.listView-meta.xml
<ListView>
    <fullName>New_Leads_Sweden</fullName>
    <columns>Contact_Title_Link__c</columns>
    <columns>Lead_Title__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Sweden</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New Leads Sweden</label>
    <sharedTo>
        <group>SE</group>
    </sharedTo>
</ListView>