force-app/main/default/objects/Lead/listViews/SE_all_leads.listView-meta.xml
<ListView>
    <fullName>SE_all_leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>pi__campaign__c</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Sweden</value>
    </filters>
    <label>SE all leads</label>
    <sharedTo>
        <group>SE</group>
    </sharedTo>
</ListView>